# internal/controller/controller.go
@@ -37,39 +37,56 @@ type Handler struct {
 }
 
 func (h Handler) Progress(ctx context.Context, req oas.Progress, params oas.ProgressParams) (oas.Status, error) {
-	if err := h.authToken(ctx, params.XToken); err != nil {
+	w, err := h.authToken(ctx, params.XToken)
+	if err != nil {
 		return oas.Status{}, err
 	}
 
 	h.lg.Info("Progress",
 		zap.String("key", req.Key),
-		zap.Bool("done", req.Done),
+		zap.String("event", string(req.Event)),
 	)
 
 	u := h.db.Chunk.Update().Where(
 		chunk.IDEQ(req.Key),
 	)
 
-	if req.Done {
+	switch req.Event {
+	case oas.ProgressEventDone:
 		if err := u.
+			SetWorker(w).
 			SetSha256Input(req.SHA256Input.Value).
 			SetSha256Output(req.SHA256Output.Value).
 			SetSha256Content(req.SHA256Content.Value).
 			SetState(chunk.StateDownloaded).
 			SetNillableLeaseExpiresAt(nil).
 			Exec(ctx); err != nil {
-			return oas.Status{}, errors.Wrap(err, "update")
+			return oas.Status{}, errors.Wrap(err, "done")
 		}
 		return oas.Status{Message: "ack done"}, nil
+	case oas.ProgressEventDownloading:
+		if err := u.
+			SetWorker(w).
+			SetLeaseExpiresAt(time.Now().Add(time.Second * 15)).
+			Exec(ctx); err != nil {
+			return oas.Status{}, errors.Wrap(err, "lease")
+		}
+		return oas.Status{Message: "ack lease"}, nil
+	case oas.ProgressEventInventory:
+		if err := u.
+			SetWorker(w).
+			SetSizeInput(req.InputSizeBytes.Value).
+			SetSizeContent(req.ContentSizeBytes.Value).
+			SetSizeOutput(req.OutputSizeBytes.Value).
+			SetState(chunk.StateReady).
+			SetNillableLeaseExpiresAt(nil).
+			Exec(ctx); err != nil {
+			return oas.Status{}, errors.Wrap(err, "inventory")
+		}
+		return oas.Status{Message: "ack inventory"}, nil
+	default:
+		return oas.Status{}, errors.Errorf("unknown event %s", req.Event)
 	}
-
-	if err := u.
-		SetLeaseExpiresAt(time.Now().Add(time.Second * 15)).
-		Exec(ctx); err != nil {
-		return oas.Status{}, errors.Wrap(err, "update lease")
-	}
-
-	return oas.Status{Message: "ack"}, nil
 }
 
 func New(db *ent.Client, lg *zap.Logger) *Handler {
@@ -116,10 +133,10 @@ func (h Handler) Run(ctx context.Context) error {
 
 }
 
-func (h Handler) authToken(ctx context.Context, tok string) error {
-	_, err := h.db.Worker.Query().Where(worker.TokenEQ(tok)).Only(ctx)
+func (h Handler) authToken(ctx context.Context, tok string) (*ent.Worker, error) {
+	w, err := h.db.Worker.Query().Where(worker.TokenEQ(tok)).Only(ctx)
 	if ent.IsNotFound(err) {
-		return &oas.ErrorStatusCode{
+		return nil, &oas.ErrorStatusCode{
 			StatusCode: 401,
 			Response: oas.Error{
 				Message: "Token not found",
@@ -127,14 +144,14 @@ func (h Handler) authToken(ctx context.Context, tok string) error {
 		}
 	}
 	if err != nil {
-		return errors.Wrap(err, "token")
+		return nil, errors.Wrap(err, "token")
 	}
 
-	return nil
+	return w, nil
 }
 
 func (h Handler) Poll(ctx context.Context, params oas.PollParams) (oas.Job, error) {
-	if err := h.authToken(ctx, params.XToken); err != nil {
+	if _, err := h.authToken(ctx, params.XToken); err != nil {
 		return oas.Job{}, err
 	}
 
@@ -150,9 +167,30 @@ func (h Handler) Poll(ctx context.Context, params oas.PollParams) (oas.Job, erro
 		ForUpdate().
 		First(ctx)
 	if ent.IsNotFound(err) {
-		return oas.NewJobNothingJob(oas.JobNothing{
-			Type: "nothing",
-		}), nil
+		ch, err := tx.Chunk.Query().Where(
+			chunk.StateIn(chunk.StateDownloaded),
+			chunk.Not(chunk.HasWorker()),
+		).Limit(1).ForUpdate().First(ctx)
+		if ent.IsNotFound(err) {
+			return oas.NewJobNothingJob(oas.JobNothing{
+				Type: "nothing",
+			}), nil
+		}
+		if err := ch.Update().
+			SetState(chunk.StateInventory).
+			Exec(ctx); err != nil {
+			return oas.Job{}, errors.Wrap(err, "lease")
+		}
+		if err := tx.Commit(); err != nil {
+			return oas.Job{}, errors.Wrap(err, "commit")
+		}
+		h.lg.Info("Scheduled inventory job",
+			zap.String("key", ch.ID),
+		)
+		return oas.NewJobInventoryJob(oas.JobInventory{
+			Type: "inventory",
+			Date: ch.ID,
+		}), err
 	}
 	if err != nil {
 		return oas.Job{}, errors.Wrap(err, "query")
